[gd_scene load_steps=38 format=3 uid="uid://dsf6itp1pf21l"]

[ext_resource type="Script" uid="uid://8apl5uo3qam7" path="res://core/biscuit_manager.gd" id="1_a04qp"]
[ext_resource type="Script" uid="uid://dn5i52svpf5b3" path="res://core/game.gd" id="1_bpu47"]
[ext_resource type="Script" uid="uid://nb2kv32vytr8" path="res://core/conveyor_pathing.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://cpylw10v2xhi3" path="res://biscuit_types/choc_chip_biscuit.tscn" id="2_8xnxh"]
[ext_resource type="Script" uid="uid://7bc4aivpmago" path="res://core/lever.gd" id="3_7jktm"]
[ext_resource type="Script" uid="uid://c7wi2gp6nyc57" path="res://core/spawning/spawn_wave.gd" id="5_sjcnv"]
[ext_resource type="Script" uid="uid://60jgksmd2ubi" path="res://core/spawning/spawn_event.gd" id="6_cjuek"]
[ext_resource type="Script" uid="uid://cighbn48ftkn1" path="res://core/criteria.gd" id="7_gjr3k"]
[ext_resource type="Script" uid="uid://bg3awv8d0fhd2" path="res://core/criteria/choc_chip_count_criteria.gd" id="8_4cdhi"]
[ext_resource type="Script" uid="uid://c2cltkcnqt75h" path="res://core/dialogue_manager.gd" id="10_bpu47"]
[ext_resource type="PackedScene" uid="uid://dwcdfsgobmmn2" path="res://UI/ui/checklist.tscn" id="10_fgh25"]

[sub_resource type="Environment" id="Environment_v1l5v"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqt5l"]
albedo_color = Color(0.26, 0.2418, 0.2418, 1)

[sub_resource type="BoxMesh" id="BoxMesh_choak"]
flip_faces = true
size = Vector3(12, 6, 12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yitki"]
albedo_color = Color(0.197937, 0.197937, 0.197937, 1)

[sub_resource type="BoxMesh" id="BoxMesh_veigg"]
size = Vector3(12, 0.8, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x0m8b"]
albedo_color = Color(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8vnw3"]
size = Vector3(12, 0.1, 1.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_yitki"]
size = Vector2(0.125, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0hh06"]
albedo_color = Color(0.56, 0.2114, 0.0952, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7tr4t"]
size = Vector3(1.5, 0.8, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ahsco"]
size = Vector3(1.4, 1, 0.9)

[sub_resource type="Curve3D" id="Curve3D_v1l5v"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -7, 0.85, 0, 0, 0, 0, 0, 0, 0, 2, 0.85, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_pqt5l"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 2, 0.95, 0, -4.4, 0, 0, 4.4, 0, 0, 5.4, 0.95, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_choak"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 2, 0.95, 0, -0.2, 0, -0.1, 0.2, 0, 0.1, 2.7, 0.95, 0.8, 0, 0, 0, 0, 0, 0, 3.2, 0.95, 0.9, 0, 0, 0, 0, 0, 0, 3.941, 0.95, 0.935, 0, 0, 0, 0, 0, 0, 4.26, 0.75, 1.022),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_pqt5l"]
size = Vector3(0.1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fc0e3"]
albedo_color = Color(0.197937, 0.197937, 0.197937, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yitki"]
size = Vector3(0.025, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_choak"]
height = 0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_feb5d"]
size = Vector3(0.2, 1.4, 1.4)

[sub_resource type="BoxMesh" id="BoxMesh_x0m8b"]
size = Vector3(0.1, 1, 0.1)

[sub_resource type="Resource" id="Resource_cjuek"]
script = ExtResource("6_cjuek")
biscuit_scene = ExtResource("2_8xnxh")
spawn_settings = Dictionary[String, Variant]({
"choc_chip_count": 7
})
metadata/_custom_type_script = "uid://60jgksmd2ubi"

[sub_resource type="Resource" id="Resource_sjcnv"]
script = ExtResource("5_sjcnv")
spawn_events = Dictionary[ExtResource("6_cjuek"), int]({
SubResource("Resource_cjuek"): 3
})
metadata/_custom_type_script = "uid://c7wi2gp6nyc57"

[sub_resource type="Resource" id="Resource_vhpdd"]
script = ExtResource("6_cjuek")
biscuit_scene = ExtResource("2_8xnxh")
spawn_settings = Dictionary[String, Variant]({
"choc_chip_max": 5,
"choc_chip_min": 3
})
metadata/_custom_type_script = "uid://60jgksmd2ubi"

[sub_resource type="Resource" id="Resource_4cdhi"]
script = ExtResource("6_cjuek")
biscuit_scene = ExtResource("2_8xnxh")
spawn_settings = Dictionary[String, Variant]({
"choc_chip_max": 9,
"choc_chip_min": 6
})
metadata/_custom_type_script = "uid://60jgksmd2ubi"

[sub_resource type="Resource" id="Resource_gjr3k"]
script = ExtResource("5_sjcnv")
spawn_events = Dictionary[ExtResource("6_cjuek"), int]({
SubResource("Resource_vhpdd"): 3,
SubResource("Resource_4cdhi"): 3
})
metadata/_custom_type_script = "uid://c7wi2gp6nyc57"

[sub_resource type="Resource" id="Resource_fgh25"]
script = ExtResource("8_4cdhi")
count = 5
operation = 0
metadata/_custom_type_script = "uid://bg3awv8d0fhd2"

[node name="Game" type="Node3D"]
script = ExtResource("1_bpu47")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v1l5v")

[node name="OverheadLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.482963, -0.12941, 0, 0.258819, 0.965926, 0.5, -0.836516, 0.224144, 0, 0, 0)
light_energy = 0.25

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(0.965926, -0.183013, 0.183013, 0, 0.707107, 0.707107, -0.258819, -0.683013, 0.683013, 1, 5, 4)
keep_aspect = 0
fov = 90.0
size = 4.0

[node name="Factory" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_pqt5l")
mesh = SubResource("BoxMesh_choak")

[node name="ConveyerBody" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
material_override = SubResource("StandardMaterial3D_yitki")
mesh = SubResource("BoxMesh_veigg")

[node name="ConveyerBelt" type="MeshInstance3D" parent="ConveyerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
material_override = SubResource("StandardMaterial3D_x0m8b")
mesh = SubResource("BoxMesh_8vnw3")
skeleton = NodePath("../..")

[node name="PathMarker" type="MeshInstance3D" parent="ConveyerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.06589, 0.46, 0)
mesh = SubResource("PlaneMesh_yitki")

[node name="RejectionBin" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.4, 1)
material_override = SubResource("StandardMaterial3D_0hh06")
operation = 2
metadata/_edit_group_ = true

[node name="BinOuterCSG" type="CSGMesh3D" parent="RejectionBin"]
mesh = SubResource("BoxMesh_7tr4t")

[node name="BinInnerCSG" type="CSGMesh3D" parent="RejectionBin/BinOuterCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
operation = 2
mesh = SubResource("BoxMesh_ahsco")

[node name="ConveyorPathing" type="Node3D" parent="." groups=["ConveyorPathing"]]
unique_name_in_owner = true
script = ExtResource("1_feb5d")

[node name="BasePath" type="Path3D" parent="ConveyorPathing"]
curve = SubResource("Curve3D_v1l5v")

[node name="AcceptedPath" type="Path3D" parent="ConveyorPathing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
curve = SubResource("Curve3D_pqt5l")

[node name="DeniedPath" type="Path3D" parent="ConveyorPathing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
curve = SubResource("Curve3D_choak")

[node name="Flap" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9, 1.8, 0)
collision_layer = 0
can_sleep = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_pqt5l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
material_override = SubResource("StandardMaterial3D_fc0e3")
mesh = SubResource("BoxMesh_yitki")

[node name="HingeJoint" type="HingeJoint3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19209e-07, 0)
node_a = NodePath("..")
angular_limit/enable = true
angular_limit/lower = -0.0872665

[node name="Lever" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 1, 0, 1.5)
script = ExtResource("3_7jktm")
metadata/_edit_group_ = true

[node name="BaseMesh" type="MeshInstance3D" parent="Lever"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_choak")

[node name="ClickableArea" type="Area3D" parent="Lever"]
collision_mask = 0
monitoring = false
monitorable = false

[node name="Shape" type="CollisionShape3D" parent="Lever/ClickableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98023e-08, 0.7, 0)
shape = SubResource("BoxShape3D_feb5d")

[node name="Handle" type="Node3D" parent="Lever"]

[node name="Mesh" type="MeshInstance3D" parent="Lever/Handle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("BoxMesh_x0m8b")
skeleton = NodePath("../..")

[node name="BiscuitManager" type="Node" parent="."]
script = ExtResource("1_a04qp")
spawn_waves = Array[ExtResource("5_sjcnv")]([SubResource("Resource_sjcnv"), SubResource("Resource_gjr3k")])
biscuit_criteria = Array[ExtResource("7_gjr3k")]([SubResource("Resource_fgh25")])

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("10_bpu47")

[node name="Checklist" parent="." instance=ExtResource("10_fgh25")]
visible = false

[connection signal="changed" from="ConveyorPathing" to="Lever" method="_on_conveyor_pathing_changed"]
[connection signal="input_event" from="Lever/ClickableArea" to="Lever" method="_on_clickable_area_input_event"]
